# t33d

./: .gitignore  CLAUDE.md  LICENSE  README.md  T33D-Project-Structure--Manual-Edits-Which-May-Need-to-be-Integrated.md  T33D-Project-Structure.md  help__dev__useful_bash_commands__git.md  help__python_learning_resources.md  python_learning_resources__suggestions_from_joe.md
claude-logs.gitIgnoreThis/: .gitignore
code/maya/: t33d_1shot_grid_tools.py.bak  t33d__maya_python__example__attribute_setter.py  t33d__maya_python__example__grid_tools_level01.py  t33d__maya_python__standalone__attribute_setter.py.bak  t33d__maya_python__standalone__uv_snapper.py
code/maya/t33d_maya_and_jupyter_lab_connector/: CLAUDE.md  README.md  pyproject.toml
code/maya/t33d_maya_and_jupyter_lab_connector/maya_jupyter/: __init__.py  install.py  kernel.py  maya_init.py
code/utils/: reconnect-mapped-drive-to-ip-of-gateway.py
exercises_and_questionnaires/: python-maya-exercises.md
help__maya_scripting/: importing_modules_in_maya.md  mayapy.md  pymel.md
maya/: t33d__maya_python__example__attribute_setter__level01.py  t33d__maya_python__example__grid_tools_level01.py  t33d__maya_python__standalone__attribute_setter.py  t33d__maya_python__standalone__grid_tools.py  t33d__maya_python__standalone__utils.py
notes/: Capitalization-in-Filenames-and-Headings.md  Naming-Conventions.py  Naming-Conventions.py.bat  README.md  Recommended-Reading.md  Where-to-Put-Your-Main-Notes-Folder.md  actually-notetaking-while-learning-and-working.md  future-proof-notes--by-joe-crawford-and-auri-ai.md  notes.md
(+68 files in other folders)
